added a requirement_analyzer module to analyze the user requirements

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY = 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
