--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 .vscode
 
-requirements.json
+project.json
 
 # Source for the following rules: https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
 # Byte-compiled / optimized / DLL files
